Fixed the map overflowing in the main page.

--- a/Project_Disability/www/css/manu_style.css
+++ b/Project_Disability/www/css/manu_style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 #map {
-    height: 95%;
+    height: 92%;
 }
 
 #hamburger {
@@ -18,6 +18,7 @@ html, body {
 .topnav {
     overflow: hidden;
     background-color: #e9e9e9;
+    height: 8%;
 }
 
 .topnav .search-container {
